--- a/index.html
+++ b/index.html
@@ -3,7 +3,55 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="css/styles.css">
+  <style>
+  body {
+    margin: 0;
+    text-align: center;
+    font-size: 40px;
+  }
+
+  h1 {
+    font-family: 'Sacramento', cursive;
+    margin-top: 50px;
+    width: 20%;
+    margin: 0 auto 0;
+
+  }
+  h2{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 30px;
+  }
+
+  .top {
+    background-color: #caf7e3;
+  }
+
+  /*.middle {
+    background-color: red;
+    height: 200px;
+    width: 200px;
+  }
+
+  .bottom {
+    background-color: blue;
+    height: 200px;
+    width: 200px;
+  }*/
+
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+  }
+  .corona{
+    display: block;
+    margin-left:20px;
+    width: 20%;
+  }
+
+
+  </style>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -24,5 +72,6 @@
 <div class="bottom">
 
 </div>
+
   </body>
 </html>
